tests/paczka1/small_fuzzy/48349780.err
Error in line 8: fQgYnXCmZwg S127 39,3
Error in line 9: fQgYnXCmZwg A660 27,2
